# vk

./: .env  .env_example  .gitignore  pyproject.toml  requirements.txt
FullStack/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
account/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
account/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_profile.py  0004_user_bio_user_birth_date_user_phone.py  0005_user_pro_photo.py
account/templates/: email.html
chat/: consumers.py  models.py  serializers.py  test_chat.py  test_websocket.py  urls.py  views.py
chat/migrations/: 0001_initial.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_image.py  0003_post_content.py  0004_remove_post_content.py
review/: models.py  permissions.py  serializers.py  urls.py  views.py
review/migrations/: 0001_initial.py  0002_favorite.py
